# blender-viz

./: .gitignore  README.md  pyproject.toml
blender_viz/: __init__.py  cli.py  data.py  scene.py
envs/brax/: ppo.py
envs/mjx/: cf2_asset.xml  crazyflie_racing_simple_env.py  generate_racing_scene.py  motor_dynamics.py  racing_simple_circle4.xml  racing_simple_complex.xml  racing_simple_lemniscate.xml  racing_simple_powerloop.xml  racing_simple_straight.xml  racing_simple_straight2.xml
examples/: rollout.csv
tests/: test_data.py
