[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-racing-viz"
version = "0.1.0"
description = "Cinematic Blender visualizations for drone-racing rollouts"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]

[project.scripts]
drone-viz = "blender_viz.cli:main"

[tool.setuptools.packages.find]
include = ["blender_viz*"]

[tool.uv]
package = true
