[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-racing-viz"
version = "0.1.0"
description = "Cinematic Blender visualizations for drone-racing rollouts"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]

[dependency-groups]
dev = ["ruff>=0.12"]

[project.scripts]
drone-viz = "blender_viz.cli:main"

[tool.setuptools.packages.find]
include = ["blender_viz*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
extend-select = ["E501"]
